crates/elif-http-derive/tests/ui/fail/inject_invalid_syntax.stderr
error: expected `:`
 --> tests/ui/fail/inject_invalid_syntax.rs:6:23
  |
6 | #[inject(user_service UserService)]
  |                       ^^^^^^^^^^^